--- a/templates/organizacao.html
+++ b/templates/organizacao.html
@@ -41,15 +41,17 @@
     {% else %}
       <u>Organização não definida.</u>
     {% endif %}
-    <span class="esconder">
-      <a
-        data-proposta='{{proposta.id}}'
-        class="link-organizacao"
-        href="{% url 'link_organizacao' proposta.id %}"
-        data-url="{% url 'link_organizacao' proposta.id %}"
-        ><small>&#128279;</small></a
-      >
-    </span>
+    {% if completo %}
+      <span class="esconder">
+        <a
+          data-proposta='{{proposta.id}}'
+          class="link-organizacao"
+          href="{% url 'link_organizacao' proposta.id %}"
+          data-url="{% url 'link_organizacao' proposta.id %}"
+          ><small>&#128279;</small></a
+        >
+      </span>
+    {% endif %}
     <br>
   </span>
   
