--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -94,6 +94,7 @@
       <label><input onchange="($(this).prop('checked') ? $('.avaliacao').show() : $('.avaliacao').hide())" type="checkbox" checked /> link avaliação</label>&nbsp;&nbsp;&nbsp;
       <label><input onchange="($(this).prop('checked') ? $('.agendamento').show() : $('.agendamento').hide())" type="checkbox" checked /> agendamento</label>&nbsp;&nbsp;&nbsp;
       <label><input onchange="($(this).prop('checked') ? $('.editar').show() : $('.editar').hide())" type="checkbox" checked /> editar</label>&nbsp;&nbsp;&nbsp;
+      <label><input onchange="($(this).prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide())" type="checkbox" checked /> sem agendamento</label>&nbsp;&nbsp;&nbsp;
     </div>
   </span>
 
@@ -320,34 +321,36 @@
   {% endif %}
   <p>&nbsp;</p>
 
-  {% if sem_banca %}
-    <br>
-    <h5>Projetos ativos sem bancas agendadas:</h5>
-    <ul>
-    {% for projeto in sem_banca %}
-      <li>
+  <div class="sem_agendamento">
+    {% if sem_banca %}
+      <br>
+      <h5>Projetos ativos sem bancas agendadas:</h5>
+      <ul>
+      {% for projeto in sem_banca %}
+        <li>
 
-        {% if projeto.orientador %}
-          <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
-            {{projeto.orientador.user.get_full_name}}:
-          </a>
-        {% endif %}
+          {% if projeto.orientador %}
+            <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
+              {{projeto.orientador.user.get_full_name}}:
+            </a>
+          {% endif %}
 
-        <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+          <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
 
-        {% if projeto.avancado %}
-          <strong style="color:red"><u>[Avançado]</u></strong>
-        {% endif %}
+          {% if projeto.avancado %}
+            <strong style="color:red"><u>[Avançado]</u></strong>
+          {% endif %}
 
-        {% if projeto.organizacao %}
-          [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
-            >{{ projeto.organizacao.nome }}</a
-          >]
-        {% endif %}
+          {% if projeto.organizacao %}
+            [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
+              >{{ projeto.organizacao.nome }}</a
+            >]
+          {% endif %}
 
-      </li>
-    {% endfor %}
-    </ul>
-  {% endif %}
+        </li>
+      {% endfor %}
+      </ul>
+    {% endif %}
+  </div>
 
 {% endblock %}
