--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -59,6 +59,7 @@
       <label><input onchange="($(this).prop('checked') ? $('.grupo').show() : $('.grupo').hide())" type="checkbox" checked /> grupo</label>&nbsp;&nbsp;&nbsp;
       <label><input onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> curso</label>&nbsp;&nbsp;&nbsp;
       <label><input onchange="($(this).prop('checked') ? $('.facilitador').show() : $('.facilitador').hide())" type="checkbox" checked /> facilitador</label>&nbsp;&nbsp;&nbsp;
+      <label><input onchange="($(this).prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide())" type="checkbox" checked /> sem agendamento</label>&nbsp;&nbsp;&nbsp;
     </div>
   </span>
 
@@ -121,6 +122,33 @@
       <p>Não existem encontros.</p>
     {% endif %}
     <p>&nbsp;</p>
+
+    <div class="sem_agendamento">
+      {% if sem_dinamicas %}
+        <br>
+        <h5>Projetos ativos sem dinâmicas agendadas:</h5>
+        <ul>
+        {% for projeto in sem_dinamicas %}
+          <li>
+
+            <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+
+            {% if projeto.avancado %}
+              <strong style="color:red"><u>[Avançado]</u></strong>
+            {% endif %}
+
+            {% if projeto.organizacao %}
+              [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
+                >{{ projeto.organizacao.nome }}</a
+              >]
+            {% endif %}
+
+          </li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+
 
     <script>
       function carrega_pagina(){
