removido bug no recarrega pagina

--- a/propostas/templates/propostas/procura_propostas.html
+++ b/propostas/templates/propostas/procura_propostas.html
@@ -403,8 +403,7 @@
   
     var request_ajax_pp= null;
 
-
-    function recarregar_pagina() 
+    function recarregar_pagina() {
 
         if (request_ajax_pp != null){ 
             request_ajax_pp.abort();
