--- a/templates/organizacao-modal.html
+++ b/templates/organizacao-modal.html
@@ -43,6 +43,8 @@
 
     var organizacao_id = $('#organizacao').val();
     
+    console.log(url)
+
     $.ajax({
         type: "POST",
         url: url,
@@ -56,11 +58,15 @@
 
               $('#organizacao_nome').html(response.organizacao);  // Para organizacao completo
 
-              novo = "<a href='../../organizacoes/organizacao_completo/"+response.organizacao_id+"'>"+response.organizacao+"</a>";
+              href = "../../organizacoes/organizacao_completo/"+response.organizacao_id
+              novo = "<a href='"+href+"'>"+response.organizacao+"</a>";
               $('#proposta'+response.proposta).html(novo);  // Só para tabela
               $('#organizacao_link').html(response.organizacao);  // Para organizacao completo
-              
-              $('#organizacao_endereco').html(response.endereco);  // Para organizacao completo
+              $('#organizacao_link').attr("href", href) // Para organizacao completo
+              $('#organizacao_endereco').html(response.organizacao_endereco);  // Para organizacao completo
+
+              $('#organizacao_website').html(response.organizacao_website) // Para organizacao completo
+              $('#organizacao_website').attr("href", response.organizacao_website) // Para organizacao completo
 
             }
             //else {
