--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -262,8 +262,11 @@
   </ul>
 
   {% if medias_oo %}
-    <div class="row mt-1">
-        <div class="col-md-4"><canvas id="radial-grupo"></canvas></div>
+
+    <div class="table-responsive">
+      <div style="position: relative; height:240px; width:480px">
+        <canvas id="radial-grupo"></canvas>
+      </div>
     </div>
 
     <script>
@@ -311,6 +314,7 @@
                 text: 'Avaliação Grupo'
             },
             scale: {
+                responsive: true,
                 angleLines: {
                     display: false
                 },
@@ -344,7 +348,9 @@
                       {% if dinamica.url_location %}
                         <a href="{{dinamica.location}}">
                       {% endif %}
+                      <span style="word-break: break-all;">
                       {{dinamica.location}}
+                      </span>
                       {% if dinamica.url_location %}
                         </a>
                       {% endif %}
