--- a/templates/projeto.html
+++ b/templates/projeto.html
@@ -56,7 +56,7 @@
         {% for dinamica in alocado.projeto.encontro_set.all %} 
             <li>
                 {{dinamica.startDate}} - {{dinamica.endDate|date:'H:i'}}
-                {% if dinamica.location %}; em: {{dinamica.location}} {% endif %}
+                {% if dinamica.location %}; em: <span style="word-break: break-all;">{{dinamica.location}}</span> {% endif %}
                 {% if dinamica.facilitador %}; com: {{dinamica.facilitador}} {% endif %}
             </li>
         {% endfor %}
