--- a/professores/templates/professores/bancas_tabela.html
+++ b/professores/templates/professores/bancas_tabela.html
@@ -13,6 +13,8 @@
 
 {% block content %}
 
+  {% include "impressora.html" %}
+
   <span class="titulo">Alocações em Bancas</span>
 
   <b>Informações: </b>&nbsp;
@@ -39,15 +41,15 @@
             <tr class="item">
               <td>
                 {% if membro.tipo_de_usuario == 2 %}
-                  <a href="{% url 'professor_detail' membro.professor.id %}">
+                  <a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">
                     {{membro.get_full_name}}
                   </a>
                 {% elif membro.tipo_de_usuario == 3 %}
-                  <a href="{% url 'parceiro_detail' membro.parceiro.id %}">
+                  <a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">
                     {{membro.get_full_name}}
                   </a>
                 {% elif membro.tipo_de_usuario == 4 %}
-                  <a href="{% url 'professor_detail' membro.professor.id %}">
+                  <a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">
                     {{membro.get_full_name}}
                   </a>
                 {% endif %}  
