--- a/professores/templates/professores/orientadores_tabela.html
+++ b/professores/templates/professores/orientadores_tabela.html
@@ -14,6 +14,8 @@
 
 {% block content %}
 
+  {% include "impressora.html" %}
+
   <span class="titulo">Alocação de Orientadores</span>
 
   <div class="table-responsive">
@@ -30,7 +32,7 @@
         {% for professor,grupos in professores %} 
           <tr class="item">
             <td>
-              <a href="{% url 'professor_detail' professor.id %}">
+              <a class="imprimir" href="{% url 'professor_detail' professor.id %}">
                 {{professor.user.get_full_name}}
               </a>
             </td>
