--- a/templates/impressora.html
+++ b/templates/impressora.html
@@ -11,9 +11,11 @@
     a.desligado {
         color: inherit;
         text-decoration: none;
-        pointer-events: none;
+        pointer-events: none !important;
         cursor: default;
     }
+    
+
 </style>
 
 <div class="logo_impressoras" style="float: right; margin-top: 4px; margin-left: 8px">
@@ -31,10 +33,20 @@
         $('.esconder').hide()
         $('.email').hide()
         $('.images').hide()
+
+        {% comment %} Renomeia temporariamente a tag href para evitar ser pega no Compy&Paste {% endcomment %}
+        $('a.imprimir[href]').each(function() {
+            var $tag = $(this);
+            $tag.attr({tmp: $tag.attr('href')})
+                .removeAttr('href');
+        });
+
     });
 
     $(document).keyup(function(e) {
+        
         if (e.key === "Escape") {
+            
             $('#informacoes').show()
             $('.logo_impressoras').show()
             $('.topnav').show()
@@ -42,6 +54,14 @@
             $('.esconder').show()
             $('.email').show()
             $('.images').show()
+
+            {% comment %} Recupera a tag href para evitar ser pega no Compy&Paste {% endcomment %}
+            $('a.imprimir[tmp]').each(function() {
+                var $tag = $(this);
+                $tag.attr({href: $tag.attr('tmp')})
+                    .removeAttr('tmp');
+            });
+
         }
     });
 
