--- a/professores/templates/professores/coorientadores_tabela.html
+++ b/professores/templates/professores/coorientadores_tabela.html
@@ -2,12 +2,11 @@
 {% comment %}
     Desenvolvido para o Projeto Final de Engenharia
     Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-    Data: 16 de Fevereiro de 2020
+    Data: 4 de Setembro de 2019
 {% endcomment %}
 
 {% block head %}
   {% load static %}
-  <script>{% include "tooltip.js" %}</script>
   {% include "tabelas_includes.html" %}
 {% endblock %}
 
@@ -16,48 +15,51 @@
   {% include "impressora.html" %}
 
   <span class="titulo">Alocação de Coorientadores</span>
-  
-  <div class="table-responsive">
 
-    {% for professores,periodo in anos %} 
-      <big>{{periodo}}</big>
-      <table id="professores"class="table table-bordered table-hover table-sm" style="width: auto;">
-        <thead class="table-info">
-          <tr>
-            <th scope="col" style="text-align: center;width:300px;">Nome</th>
-            <th scope="col" style="text-align: center;width:70px;">Grupos</th>
-          </tr>
-        </thead>
-        {% for professor, grupos in professores %} 
-          <tr class="item">
-            <td>
-              <a class="imprimir" href="{% url 'professor_detail' professor.id %}">
-                {{professor.user.get_full_name}}
-              </a>
-            </td>
-            <td style="text-align: center;" data-toggle="tooltip" data-html="true" animation="true" title="
-              {% for grupo in grupos %}
-                &bull;
-                {{grupo.get_titulo}}
-                [{{grupo.organizacao}}]
-                <br>
-              {% endfor %}
-            "> 
-              <span style="color:blue;">
+  {% include "edicoes.html" %}
+
+  <div class="atualizar">
+
+    <div class="table-responsive">
+
+        <table id="CoorientacoesTable" class="table table-bordered table-hover table-sm" style="width: auto;">
+          <thead class="table-info">
+            <tr>
+              <th scope="col" style="text-align: center;width:300px;">Nome</th>
+              <th scope="col" style="text-align: center;width:70px;">Grupos</th>
+              <th scope="col" style="text-align: center;width:auto;">Projetos</th>
+            </tr>
+          </thead>
+          {% for professor, grupos in orientacoes %} 
+
+            <tr class="item">
+              <td>
+                <a class="imprimir" href="{% url 'professor_detail' professor.id %}">{{professor.user.get_full_name}}</a> <a href="mailto:{{professor.user.email}}">&lt;{{professor.user.email}}&gt;</a>
+              </td>
+              <td style="text-align: center;"> 
                 {{grupos|length}}
-              <span>
-            </td>
-          </tr>
-        {% endfor %}
-      </table>
-      <br>
-    {% endfor %}
-  
+              </td>
+              <td style="text-align: left;">{% for grupo in grupos %}<p>&bull; [{{grupo.projeto.ano}}.{{grupo.projeto.semestre}}] {{grupo.projeto.get_titulo}} ({{grupo.projeto.organizacao}}) { {{ grupo.projeto.alocacao_set.all.count }} estudante(s) }<br></p>{% endfor %}</td>
+            </tr>
+          {% endfor %}
+        </table>
+        <br>
+
+    </div>
+
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+
+    <script>
+      function carrega_pagina() {
+      };
+      window.onload = carrega_pagina
+    </script>
+
   </div>
 
-  <br>
-  <br>
-
-  {% include "tabelas_simples_scripts.html" %}
+  {% with tabela='Coorientacoes' %}
+      {% include "edicoes_ajax.html" %}
+  {% endwith %}
 
 {% endblock %}
