novo sistema de feedback de estudantes

--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -133,6 +133,14 @@
         <h5>Agendar horário das dinâmicas</h5>
     </a>
 
+    <hr>
+
+    <a href="{% url 'estudante_feedback' %}"><h5>Enviar feedback de projeto</h5></a>
+
+
+
+
+
     {% comment %} <a href=" reembolso " > <h5> Pedido de Reembolso </h5> </a> {% endcomment %}
 
     <div class="mensagem" id="projeto">Você não está alocado em um projeto.</div>
