--- a/projetos/templates/projetos/lista_feedback_estudantes.html
+++ b/projetos/templates/projetos/lista_feedback_estudantes.html
@@ -25,51 +25,38 @@
   
   <!-- VER: https://stackoverflow.com/questions/53202862/trying-to-sort-tables-with-w3-js-but-its-not-sorting-numbers-properly -->
 
-  {% if feedbacks %}
+  
     <table id="FeedbacksTable">
       <tr>
-        <th>ver</th>
-        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Nome</th>
-        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Projeto</th>
-        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Data</th>
+        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
+        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Projeto</th>
+        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Data</th>
+        <th class="text-center">Mensagem</th>
       </tr>      
-      {% for feedback in feedbacks %} 
+      {% for estudante, projeto, feedback in alocacoes %} 
         <tr class="item">
-          <td class="text-center">
-            <a href="{% url 'mostra_feedback_estudante' feedback.id %}">
-              &#x1f441;
+          <td style='font-size:80%'>
+            {{estudante.user.get_full_name}}
+          </td>
+          <td style='font-size:80%'>
+            {{projeto}}
+          </td>
+          <td style='font-size:80%'>
+            {% if feedback %}
+              <a href="{% url 'mostra_feedback_estudante' feedback.id %}">
+                {{feedback.momento|date:"Y.m.d"}}
+              </a>
+            {% endif %}
+          </td>
+          <td style='font-size:80%' class="text-center">
+            <a href="mailto:{{estudante.user.email}}?subject=Feedback%20Final%20PFE&amp;body={% include 'mensagem_feedback_final.html' %}">
+              e-mail
             </a>
-          </td>
-          <td>
-            {% if feedback.nome %}
-              {{feedback.nome}}
-            {% else %}
-              Anônimo
-            {% endif %}
-          </td>
-          <td>
-            {% if feedback.email %}
-              {{feedback.email}}
-            {% else %}
-              Anônimo
-            {% endif %}
-          </td>
-          <td>
-            {% if feedback.empresa %}
-              {{feedback.empresa}}
-            {% else %}
-              Anônimo
-            {% endif %}
-          </td>
-          <td>
-            {{feedback.data|date:"Y.m.d"}}
           </td>
         </tr>
       {% endfor %}
     </table>
-  {% else %}
-    <p>Não existem feedbacks disponíveis.</p>
-  {% endif %}
+  
 
   <p>&nbsp;</p>
 
